<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CaveNav</string>
    <string name="menu_clear">Clear</string>
    <string name="click_stepping">Click stepping</string>
    <string name="follow_edges">Follow edges</string>
    <string name="choose_map">Choose map...</string>
    <string name="caestert_negative">Caestert negative</string>
    <string name="caestert">Caestert</string>
    <string name="geogif">Geo</string>
    <string name="switch_views">Switch views</string>
    <string name="route">Route</string>
    <string name="choose_mode">Mode</string>
    <string name="mode_normal">Normal</string>
    <string name="mode_waypoint">Routing</string>
    <string name="mode_graph">Graph</string>
    <string name="mode_poi">POI</string>
</resources>
