<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/choose_mode"
          android:title="@string/choose_mode" 
          android:showAsAction="ifRoom"  >
        <menu>
        	<group android:checkableBehavior="single">
				<item android:id="@+id/mode_normal"
			          android:title="@string/mode_normal" 
			          android:checked="true" />
				<item android:id="@+id/mode_waypoint"
			          android:title="@string/mode_waypoint" />
			    <item android:id="@+id/mode_graph"
			          android:title="@string/mode_graph" />
			    <item android:id="@+id/mode_poi"
			          android:title="@string/mode_poi" />
		    </group>
		</menu>
	</item>
    <item android:id="@+id/menu_clear"
          android:title="@string/menu_clear"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/switch_views" android:title="@string/switch_views" android:checkable="false"></item>
    <item android:id="@+id/click_stepping"
          android:title="@string/click_stepping"
          android:checkable="true" />
    <item android:id="@+id/follow_edes"
          android:title="@string/follow_edges"
          android:checkable="true" />
    <item android:id="@+id/sync_poi"
          android:title="@string/sync_poi" />
    <item android:id="@+id/choose_map"
          android:title="@string/choose_map" >
        <menu>
            <item android:id="@+id/caestert"
                  android:title="@string/caestert" />
            <item android:id="@+id/ternaaien"
                  android:title="@string/ternaaien" />
        </menu>
    </item>
    
</menu>